# scripts

./: LOG.md  PIPELINE.md  README.md  __init__.py  config.py  eyeball.py  eyeball_bkg.py  eyeball_fitting.py  eyeball_saturate.py  free_fitting_original.py  free_fitting_original_2.py  free_fitting_original_3.py  get_bkg_rmin.py  mask_companion.py  mask_inner.py  mask_outer.py  mask_segmap_all.py  mask_star.py  mask_total.py  mask_total_auto.py  my_tools.py  profile_quarters.py  pyproject.toml  rank.txt  subtract_bkg.py  sum_all.py
bkg/: measure_bkg_err.py  profile_quarters.py  subtract_bkg.py  sum_all.py
compare_old/: README.md  audit_comparison.py
fitting/: bmodel.py  build_model.py  clean_pixels.py  get_cog.py  profile_clean.py  total_var.py
mask/: mask_inner.py  mask_manual.py  mask_outer.py  mask_segmap_all.py
my_tools/: __init__.py  _bkg.py  _cosmo.py  _fitting.py  _image.py  _io.py  _plot.py
