[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "proc2-scripts"
version = "0.1.0"
description = "StellarHalo Process2 analysis scripts"
requires-python = ">=3.9"
dependencies = [
    "astropy",
    "numpy",
    "matplotlib",
    "scipy",
    "photutils",
    "regions",
]

[tool.setuptools]
# 扁平包结构，无子目录
py-modules = []
